Ceska Sporitelna CS update, ready for design, fixed numerical abbreviations in PFx CS

--- a/www.topmonks.com/src/html/case-studies/ceska-sporitelna-web-api/index.html
+++ b/www.topmonks.com/src/html/case-studies/ceska-sporitelna-web-api/index.html
@@ -36,15 +36,14 @@
   <div class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner tm-layout-wrapper">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <h2>Česká spořitelna - WebAPI</h2>
-        <h3>The WebAPI project is an evidence TopMonks not only brings innovation into corporate environment, but also steers it in the exact right direction. Long before the EU PSD2 directive was drafted, long before public APIs became a trend in banking, long even before such ideas crossed the minds of mainstream, our team already had known very well that public REST API gateways, powered by cloud solutions, were the way to go for banks of future.
-        </h3>
+        <h2><span class="no-transform ">WebAPI</span> Česká Spořitelna</h2>
+        <h3>The WebAPI project is an evidence TopMonks not only brings innovation into the corporate environment but also steers it in the exact right direction.</h3>
         <ul class="tm-case-study__project-numbers-list">
           <li class="tm-case-study__project-numbers-item"><strong class="tm-case-study__project-number">4</strong>
             <p>years in production</p></li>
           <li class="tm-case-study__project-numbers-item"><strong class="tm-case-study__project-number">2 </strong>
-            <p>years before PSD2</p></li>
-          <li class="tm-case-study__project-numbers-item"><strong class="tm-case-study__project-number"><abbr title="8 000 000">8 bn</abbr></strong>
+            <p>years before <abbr title="Payment Services Directive">PSD2</abbr></p></li>
+          <li class="tm-case-study__project-numbers-item"><strong class="tm-case-study__project-number"><abbr title="8 000 000">8M</abbr></strong>
             <p>requests a day</p></li>
           <li class="tm-case-study__project-numbers-item"><strong class="tm-case-study__project-number">10</strong>
             <p>monks working on the project</p></li>
@@ -70,7 +69,7 @@
   <div class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner tm-layout-wrapper">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <p>So when [CS] came to us in [20XX] with an idea to build a simple mobile app to provide read-only access to your personal account, we suggested them to think bigger. Together we started developing a truly groundbreaking custom-made cloud integration platform to be used internally by the bank, and externally by public. Today WebAPI has become the hearth of our client's infrastructure, enabling them to stay on the technological edge as a bank with a 21st-century-grade public interface. Most of the things you can think of, including their new George internet banking, run over the WebAPI platform, which is currently also being adopted by the whole Erste Group. They are on the move, miles ahead of competitors:</p>
+        <p>Long before the EU <abbr title="Payment Services Directive">PSD2</abbr> directive was drafted, long before public APIs became a trend in banking, even long before such ideas became mainstream, our team already had known very well that public REST API gateways, powered by cloud solutions, were the way to go for banks of future.</p>
       </div>
     </div>
   </div>
@@ -81,8 +80,8 @@
     <div class="mdc-layout-grid__inner tm-layout-wrapper">
       <div
         class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 tm-case-study__section tm-case-study__section--right tm-case-study__section--success">
-        <h3>Heading level H3 ?</h3>
-        <p>An extensive subset of bank's APIs was exposed publicly to 3rd party developers to design & test their own layer of applications built on top of it.</p>
+        <h3>Read-only? Think bigger</h3>
+        <p>So when Česká Spořitelna approached us in 2014 with an idea to build a simple mobile app to provide read-only access to your personal account, we suggested them to think bigger. Together we started developing a genuinely groundbreaking custom-made cloud integration platform to be used internally by the bank, and externally by the public.</p>
       </div>
     </div>
   </div>
@@ -92,8 +91,8 @@
   <div class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner tm-layout-wrapper">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 tm-case-study__section tm-case-study__section--expand">
-        <h3>Heading level H3 ?</h3>
-        <p>All the cloud services were exposed in a standardized uniform manner (RESTfull API) to avoid integration chaos, and reduce costs.</p>
+        <h3>The heart of client's infrastructure</h3>
+        <p>Today WebAPI has become the heart of our client's infrastructure, enabling them to stay on the technological edge as a bank with a 21st-century-grade public interface. Most of the things you can think of, including their new George internet banking, run over the WebAPI platform, which is currently also being adopted by the whole Erste Group.</p>
       </div>
     </div>
   </div>
@@ -104,19 +103,14 @@
     <div class="mdc-layout-grid__inner tm-layout-wrapper">
       <div
         class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 tm-case-study__section tm-case-study__section--right tm-case-study__section--cloud">
-        <h3>Heading level H3 ?</h3>
-        <p>WebAPI provides a proven, massively scalable infrastructure, handling >8M requests per day, supported by an easy to use developer portal [linkuj], making up a platform that can be reconfigured live, instantly with 0 downtime.</p>
-      </div>
-    </div>
-  </div>
-</section>
-
-<section>
-  <div class="mdc-layout-grid">
-    <div class="mdc-layout-grid__inner tm-layout-wrapper">
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 tm-case-study__section tm-case-study__section--feedback">
-        <h3>Heading level H3 ?</h3>
-        <p>Our client got the tools to manage system complexity and redistribute resources; to impose limits on the number and duration of requests, manage access to services in one place, as well as to collect audit logs for analysis, and much more...</p>
+        <h3>Miles ahead of competitors</h3>
+        <p>They are on the move, miles ahead of competitors:</p>
+        <ul class="formatted">
+          <li>A significant subset of bank's APIs was exposed publicly to 3rd party developers to design & test their own layer of applications built on top of it.</li>
+          <li>All the cloud services were exposed in a standardized uniform manner (RESTfull API) to avoid integration chaos, and reduce costs.</li>
+          <li>WebAPI provides a proven, massively scalable infrastructure, handling more than 8 million requests per day, supported by an easy to use <a href="https://developers.erstegroup.com/">developer portal</a>, creating a platform that can be reconfigured live, instantly with 0 downtimes.</li>
+          <li>Our client got the tools to manage system complexity and redistribute resources; to impose limits on the number and duration of requests, manage access to services in one place, as well as to collect audit logs for analysis, and much more...</li>
+        </ul>
       </div>
     </div>
   </div>
@@ -126,7 +120,7 @@
   <div class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner tm-layout-wrapper">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <p>Do you also want to make a leap from monoliths to micro-services? From server racks to cloud? Contact us and get ahead in FinTech. Benefit from years of experience & expertise our team gained while working for the largest bank in Czechia.</p>
+        <p>Do you also want to make a leap from monoliths to micro-services? From server racks to the cloud? Contact us and get ahead in the FinTech industry. Benefit from years of experience & expertise our team gained while working for the largest bank in the Czech Republic.</p>
       </div>
     </div>
   </div>
