--- a/www.topmonks.com/src/html/case-studies/price-fx/index.html
+++ b/www.topmonks.com/src/html/case-studies/price-fx/index.html
@@ -41,7 +41,7 @@
         <ul class="tm-case-study__project-numbers-list">
           <li class="tm-case-study__project-numbers-item"><strong class="tm-case-study__project-number">2</strong>
             <p>years from startup to a working company</p></li>
-          <li class="tm-case-study__project-numbers-item"><strong class="tm-case-study__project-number">1 bn</strong>
+          <li class="tm-case-study__project-numbers-item"><strong class="tm-case-study__project-number"><abbr title="1 000 000 000">1 bn</abbr></strong>
             <p>CZK valuation</p></li>
           <li class="tm-case-study__project-numbers-item"><strong class="tm-case-study__project-number">15</strong>
             <p>monks on the project</p></li>
