--- a/www.topmonks.cz/src/html/jak-pracujeme/price-fx/index.html
+++ b/www.topmonks.cz/src/html/jak-pracujeme/price-fx/index.html
@@ -41,7 +41,7 @@
         <ul class="tm-case-study__project-numbers-list">
           <li class="tm-case-study__project-numbers-item"><strong class="tm-case-study__project-number">2</strong>
             <p>roky od startupu k fungující firmě</p></li>
-          <li class="tm-case-study__project-numbers-item"><strong class="tm-case-study__project-number">1 mil</strong>
+          <li class="tm-case-study__project-numbers-item"><strong class="tm-case-study__project-number"><abbr title="1 000 000 000">1 mld</abbr></strong>
             <p>valuace v Kč</p></li>
           <li class="tm-case-study__project-numbers-item"><strong class="tm-case-study__project-number">15</strong>
             <p>monků na projektu</p></li>
