Blockchain - Block-stars

--- a/blockchain.topmonks.com/src/html/index.html
+++ b/blockchain.topmonks.com/src/html/index.html
@@ -255,7 +255,7 @@
         <div
           class="our-work_blockstars mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
           <h3 class="h3_larger">Blockstars Conference</h3>
-          <p>We co-organized Blockstars Summit (<a href="http://www.block-stars.com/">www.block-stars.com</a>) with goal
+          <p>We co-organized <a href="http://www.block-stars.com/">Blockstars Summit</a> with goal
             to
             promote blockchain for the commercial and startup scene and support new
             blockchain projects to offer inspiration both within and beyond the crypto
