--- a/blockchain.topmonks.com/src/html/index.html
+++ b/blockchain.topmonks.com/src/html/index.html
@@ -52,10 +52,10 @@
       <div class="mdc-layout-grid__inner">
         <div class="developers mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
           <h1>Developers
-            for your blockchain idea</h1>
+            for your blockchain&nbsp;idea</h1>
         </div>
         <div class="opening_button mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-          <a href="#contact" class="button">HIRE OUR DTEAM</a>
+          <a href="#contact" class="button">HIRE OUR dTEAM</a>
         </div>
       </div>
     </div>
@@ -76,7 +76,7 @@
         </div>
         <div
           class="value_1 mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
-          <h3>Your freedom can't affect the<br> freedom of others</h3>
+          <h3>Your freedom can't affect the<br> freedom of others.</h3>
           <p>We realize that the freedom comes with responsibility.</p>
         </div>
         <div
@@ -183,8 +183,8 @@
     <div class="mdc-layout-grid tm-layout-wrapper">
       <div class="mdc-layout-grid__inner">
         <div
-          class="security_first mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-6-desktop">
-          <img src="images/security-first.svg" class="security_first-img" alt="Security First">
+          class="security_first-img mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-6-desktop">
+          <h2>Security First</h2>
         </div>
         <div
           class="security_first-boxes mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-6-desktop">
@@ -254,8 +254,8 @@
         </div>
         <div
           class="our-work_blockstars mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
-          <h3 class="h3_larger">Blockstars Conference</h3>
-          <p>We co-organized <a href="http://www.block-stars.com/">Blockstars Summit</a> with goal
+          <h3 class="h3_larger">BlockStars Conference</h3>
+          <p>We co-organized <a href="http://www.block-stars.com/">BlockStars Summit</a> with goal
             to
             promote blockchain for the commercial and startup scene and support new
             blockchain projects to offer inspiration both within and beyond the crypto
@@ -271,7 +271,6 @@
       <div class="mdc-layout-grid__inner">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
           <h2>Interested? </h2>
-          <h2 class="h2_title">Leave us a Message!</h2>
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
           <img src="/images/team/lea.svg" alt="[photo] Lea Petrášová">
@@ -340,6 +339,9 @@
               </g>
             </svg>
           </a>
+        </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+          <h2 class="h2_title"><a href="mailto:blockchain@topmonks.com" class="button">CONTACT US!</a></h2>
         </div>
       </div>
     </div>
