background behaviour fixed

--- a/prodeti.topmonks.cz/src/html/index.html
+++ b/prodeti.topmonks.cz/src/html/index.html
@@ -202,22 +202,25 @@
   </div>
 </header>
 <main id="main_content" class="main_content">
-  <section id="uvod" class="main_info">
-    <div class="mdc-layout-grid wrapper">
-      <div class="mdc-layout-grid__inner">
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
-          <h1>Kurz programování pro děti</h1>
-          <ul>
-            <li>hodnotný benefit pro vaše zaměstnance</li>
-            <li>individuální přístup k&nbsp;dětem</li>
-            <li>děti se naučí komunikaci a spolupráci</li>
-          </ul>
-          <br>
-          <a href="#kontakt" class="button">VÍCE INFORMACÍ</a>
+  <div class="tm-bgnd-wrapper">
+    <section id="uvod" class="main_info">
+        <div class="mdc-layout-grid wrapper">
+          <div class="mdc-layout-grid__inner">
+            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+              <h1>Kurz programování pro děti</h1>
+              <ul>
+                <li>hodnotný benefit pro vaše zaměstnance</li>
+                <li>individuální přístup k&nbsp;dětem</li>
+                <li>děti se naučí komunikaci a spolupráci</li>
+              </ul>
+              <br>
+              <a href="#kontakt" class="button">VÍCE INFORMACÍ</a>
+            </div>
+          </div>
         </div>
-      </div>
-    </div>
-  </section>
+    </section>
+  </div>
+
   <section id="basic-info">
     <div class="mdc-layout-grid wrapper">
       <div class="mdc-layout-grid__inner">
