--- a/www.topmonks.com/src/html/case-studies/price-fx/index.html
+++ b/www.topmonks.com/src/html/case-studies/price-fx/index.html
@@ -55,7 +55,8 @@
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner tm-layout-wrapper">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 tm-img-wrapper">
-          <img alt="[photo] Topmonks team at work"
+          <img title="Price f(x) in-app screenshot"
+               alt="[photo] Price f(x) in-app screenshot"
                src="https://res.cloudinary.com/topmonks/image/upload/w_1008,q_auto,f_auto,dpr_auto/v1534518123/topmonks.com/pricefx_hero.png"
                srcset="https://res.cloudinary.com/topmonks/image/upload/w_1008,q_auto,f_auto,dpr_auto/v1534518123/topmonks.com/pricefx_hero.png 1x,
                       https://res.cloudinary.com/topmonks/image/upload/w_1008,q_auto,f_auto,dpr_2/v1534518123/topmonks.com/pricefx_hero.png 2x"/>
