Links in footer updated for topmonks.com and .cz

--- a/www.topmonks.com/src/html/shared/footer.html
+++ b/www.topmonks.com/src/html/shared/footer.html
@@ -18,8 +18,9 @@
           <ul>
             <li><a href="/">Home</a></li>
             <li><a href="https://studio.topmonks.com/">Startup Studio</a></li>
-            <li><a href="https://teams.topmonks.com/">Teams as Service</a></li>
+            <li><a href="https://blockchain.topmonks.com/">Blockchain Development</a></li>
             <li><a href="https://prodeti.topmonks.cz/">Programming for Kids</a></li>
+            <li><a href="https://blog.topmonks.com/">TopMonks Blog</a></li>
             <li><a href="/contact/">Contacts</a></li>
           </ul>
         </nav>
