--- a/www.topmonks.cz/src/html/shared/footer.html
+++ b/www.topmonks.cz/src/html/shared/footer.html
@@ -18,8 +18,9 @@
           <ul>
             <li><a href="/">Home</a></li>
             <li><a href="https://studio.topmonks.com/">Startup Studio</a></li>
-            <li><a href="https://teams.topmonks.com/">Teams as Service</a></li>
+            <li><a href="https://blockchain.topmonks.com/">Blockchain Development</a></li>
             <li><a href="https://prodeti.topmonks.cz/">Programování pro děti</a></li>
+            <li><a href="https://blog.topmonks.com/">TopMonks Blog</a></li>
             <li><a href="/kontakt/">Kontakt</a></li>
           </ul>
         </nav>
@@ -41,7 +42,6 @@
         </div>
         <div><a itemprop="telephone" href="tel:+420226257521">+420&nbsp;226&nbsp;257&nbsp;521</a><br>
           <a itemprop="email" href="mailto:info@topmonks.com">info@topmonks.com</a></div>
-
       </div>
     </div>
   </div>
@@ -50,7 +50,7 @@
   <div class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner tm-layout-wrapper">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
-        <p>© 2018 TopMonks s.r.o., VAT ID: <span itemprop="vatID">CZ24847437</span></p>
+        <p>© 2018 TopMonks s.r.o., DIČ: <span itemprop="vatID">CZ24847437</span></p>
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
         <div class="social-buttons">
