updating CS version of contacts

--- a/www.topmonks.cz/src/html/kontakt/index.html
+++ b/www.topmonks.cz/src/html/kontakt/index.html
@@ -111,11 +111,6 @@
             </div>
           </div>
         </div>
-        <!--div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
-          <a href="https://mapy.cz/s/17lM6">
-            <img class="pure-img map" alt="Mapa k TopMonks Praha" src="/images/contact/contact-map.png">
-          </a>
-        </div-->
         <div class="box mdc-layout-grid__cell address" itemprop="subOrganization" itemscope="" itemtype="https://schema.org/Organization"
              id="ostrava">
           <a href="https://goo.gl/maps/SkoWqfoKgg12" class="map" title="Show Ostrava Office on map">
@@ -189,7 +184,7 @@
           </span><br>
           <a href="mailto:invoices@topmonks.com">invoices@topmonks.com</a>
 
-          <div>Reg. No: 24847437<br> VAT ID: <span itemprop="vatID">CZ24847437</span></div>
+          <div>IČO: 24847437<br> DIČ: <span itemprop="vatID">CZ24847437</span></div>
         </div>
         <div class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-6 mdc-layout-grid__cell--span-8-tablet">
           <h3>Bankovní účet</h3>
