clicking the menu item now closes the menu (mobile), mobile scroll area now in srollable container below header

--- a/blockchain.topmonks.com/src/html/index.html
+++ b/blockchain.topmonks.com/src/html/index.html
@@ -23,7 +23,7 @@
   <link rel="canonical" href="https://blockchain.topmonks.com/">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@topmonks">
-  <meta name="twitter:title" property="og:title" content="Blockchain">
+  <meta name="twitter:title" property="og:title" content="Developers for your blockchain idea">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://blockchain.topmonks.com/">
   <script>(function(w, d, s, l, i) {
@@ -44,8 +44,7 @@
 <body>
 
 {% include 'shared/header.html' %}
-
-
+<div class="tm-content-wrapper">
 <main id="main_content" class="main_content">
   <section id="main_info" class="opening">
     <div class="mdc-layout-grid tm-layout-wrapper">
@@ -343,7 +342,6 @@
     </div>
   </section>
 
-
   <section id="our-work" class="our-work">
     <div class="mdc-layout-grid tm-layout-wrapper">
       <div class="mdc-layout-grid__inner">
@@ -619,4 +617,5 @@
     </div>
   </div>
 </footer>
+</div>
 </html>
