prodeti web - updating site url from topmonks.com to topmonks.cz

--- a/prodeti.topmonks.cz/src/html/index.html
+++ b/prodeti.topmonks.cz/src/html/index.html
@@ -701,7 +701,7 @@
               <a class="contact_us" href="mailto:info@topmonks.com">info@topmonks.com</a>
             </p>
             <p>
-              <a href="https://www.topmonks.com/">www.topmonks.com</a>
+              <a href="https://www.topmonks.cz/">www.topmonks.cz</a>
             </p>
           </div>
         </div>
