Blockchain tablet security first

--- a/blockchain.topmonks.com/src/html/index.html
+++ b/blockchain.topmonks.com/src/html/index.html
@@ -182,7 +182,7 @@
       <div class="mdc-layout-grid tm-layout-wrapper">
         <div class="mdc-layout-grid__inner">
           <div
-            class="security_first-img mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-6-desktop">
+            class="security_first-img mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
             <svg width="499px" height="487px" viewBox="0 0 506 487" version="1.1" xmlns="http://www.w3.org/2000/svg"
                  xmlns:xlink="http://www.w3.org/1999/xlink">
               <!-- Generator: Sketch 51.2 (57519) - http://www.bohemiancoding.com/sketch -->
@@ -230,7 +230,7 @@
             </svg>
           </div>
           <div
-            class="security_first-boxes mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-6-desktop">
+            class="security_first-boxes mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
             <div class="mdc-layout-grid__inner">
               <div
                 class="security_first-box security_first-box_purple mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-6-desktop">
