studio topmonks.com

--- a/studio.topmonks.com/src/html/index.html
+++ b/studio.topmonks.com/src/html/index.html
@@ -6,7 +6,61 @@
 {% endblock %}
 
 {% block content %}
-  {{ macros.pageHeader('We are a startup studio!','Do you have an idea for the next big thing?','<a data-scroll="" class="action-button" href="#how-it-works">Come and Pitch Us</a>') }}
+
+<div class="tm-content-wrapper">
+  <main id="main_content" class="main_content">
+    <section id="main_info" class="opening">
+      <div class="mdc-layout-grid tm-layout-wrapper">
+        <div class="mdc-layout-grid__inner">
+          <div class="startup-developers mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+            <h1>Developers
+              for your startup</h1>
+            <p>TopMonks Startup Monastery is located in the historical Prague, in heart of
+              Europe 60+ developers, designers &amp; project managers are ready to boost your
+              idea from scratch. We are your tech angels &amp; your first investors.</p>
+          </div>
+          <div class="opening_button mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+            <a href="#contact" class="button">COME PITCH TO US</a>
+          </div>
+          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+            <img>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
+
+  <section id="pitch_us" class="pitch_us">
+    <div class="mdc-layout-grid tm-layout-wrapper">
+      <div class="mdc-layout-grid__inner">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+          <h2>Come pitch to us</h2>
+        </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+        <h3>01. MEET US</h3>
+        <p>We offer you our friendly feedback on your project and some fine coffee
+          &amp;&nbsp;tea.</p>
+      </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+          <h3>02. PROTOTYPING</h3>
+          <p>We offer you our friendly feedback on your project and some fine coffee
+            &amp;&nbsp;tea.</p>
+        </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+          <h3>01. MEET US</h3>
+          <p>We offer you our friendly feedback on your project and some fine coffee
+            &amp;&nbsp;tea.</p>
+        </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+          <h3>01. MEET US</h3>
+          <p>We offer you our friendly feedback on your project and some fine coffee
+            &amp;&nbsp;tea.</p>
+        </div>
+
+      </div>
+    </div>
+  </section>
+</div>
 
 
 
